# bimoryn-api

./: .dockerignore  DEPLOY.md  Dockerfile  Dockerfile.api  README.md  fly.toml  onboard.bat  onboard.sh  pyproject.toml  render.yaml  ruff.toml
.github/workflows/: benchmark.yml  ci.yml  deploy.yml  pages.yml  release.yml  uptime.yml
benchmarks/: budget.json  check_regression.py  generate_fixtures.py  run_benchmarks.py
bimoryn/: __init__.py  api.py  cli.py  engine.py  models.py
bimoryn/output/: bcf.py  json_report.py
bimoryn/rules/: __init__.py  base.py  geometry.py  mep.py  naming.py  parameters.py  structure.py
blog/: 01-clash-detection-mist-problemen.md  02-van-5-naar-40-validation-rules.md  03-500mb-ifc-valideren-benchmarks.md  04-ils-compliance-automatiseren.md
docs/: output-schema.md
docs/api/: openapi.yaml
docs/release/: process.md
docs/rules/: GE.md  ME.md  NM.md  PM.md  ST.md  index.md
samples/: demo.ifc
tests/: conftest.py  test_engine.py  test_rules_extended.py
website/: index.html
